fix offer text alignment

--- a/css/offers.css
+++ b/css/offers.css
@@ -82,7 +82,7 @@
     }
     p {
         margin: 0;
-        padding: 1px 0 2px;
+        padding: 2px 0 1px;
         font-size: 17px;
         line-height: 1.2;
         font-weight: 300;
